Fix issue in borrowing where parts weren't being populated, fix z-index issue with notifications

--- a/shared/gh/css/gh.base.css
+++ b/shared/gh/css/gh.base.css
@@ -268,7 +268,7 @@ label {
     left: 40px;
     position: fixed;
     width: 30%;
-    z-index: 9999;
+    z-index: 99999999;
 }
 
 .notifications.bottom-left > .alert {
